fixed everything being too small

--- a/CSS/_copyright.scss
+++ b/CSS/_copyright.scss
@@ -12,6 +12,6 @@
 @media only screen and (min-width: 1024px) {
     .copyright{
         text-align: right;
-        font-size: .6em;
+        font-size: 1em;
     }
 }
