--- a/CSS/_header.scss
+++ b/CSS/_header.scss
@@ -15,6 +15,7 @@
             font-size: .8rem;
             border-radius: 1rem;
             box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.25);
+            color: $dark_cyan;
         }
     }
 }
@@ -23,11 +24,13 @@
 @media only screen and (min-width: 1024px) {
     header{
         margin-bottom: 3em;
+        padding-top: 2.5em;
         img{
-            width: 10rem;
+            width: 14rem;
         }
         .button{
-            padding: .5rem 2rem .5rem 2rem;
+            padding: .8rem 3.5rem .8rem 3.5rem;
+            border-radius: 2rem;
         }
     }
 }
