--- a/CSS/_section_contact.scss
+++ b/CSS/_section_contact.scss
@@ -60,18 +60,25 @@
 @media only screen and (min-width: 1024px) {
     .contact{
         .content_wrap{
+            padding-top: 5em;
+            img{
+                width: 17em;
+            }
             .piece_wrap{
                 display: flex;
                 .contact_piece{
                     width: 20%;
-                    font-size: .6em;
+                    font-size: 1em;
                 }
                 .contact_piece:nth-child(1){
                     margin-right: 8em;
-                    width: 30%;
+                    width: 22%;
+                }
+                .contact_piece:nth-child(3),.contact_piece:nth-child(2){
+                    padding-left: 7em;
                 }
                 .contact_piece:nth-child(3){
-                    margin-right: -4em;
+                    margin-right: 1.5em;
                 }
                 .contact_piece:nth-child(4){
                     align-items: flex-start;
