--- a/CSS/_section_middle.scss
+++ b/CSS/_section_middle.scss
@@ -57,7 +57,7 @@
 @media only screen and (min-width: 1024px) {
     .middle{
         .content_wrap{
-            padding-bottom: 8em;
+            padding-bottom: 16em;
             .middle_piece{
                 @include center;
                 padding: 0;
@@ -71,10 +71,11 @@
                     text-align: left;
                     padding: 0% 5% 0% 10%;
                     h1{
-                        font-size: 1em;
+                        font-size: 2.5em;
+                        margin-bottom: .5em;
                     }
                     p{
-                        font-size: .8em;
+                        font-size: 1.3em;
                     }
                 }
                 img{
@@ -82,13 +83,23 @@
                     padding: 5%;
                     width: 40%;
                 }
-                border-radius: .5em;
+                border-radius: 1em;
             }
             .middle_piece:nth-child(1),.middle_piece:nth-child(3){
                 flex-direction: row-reverse;
             }
             :nth-child(4){
-                width: 45em;
+                width: 60em;
+                height: 20em;
+                bottom: -11.5em;
+                h1{
+                    font-size: 2em;
+                }
+                .button{
+                    font-size: 1.5em;
+                    font-weight: bold;
+                    padding: 1em 3.5em 1em 3.5em;
+                }
             }
         }
     }
